--- a/app/HTML/student-home.html
+++ b/app/HTML/student-home.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-
   <header class="top-bar">
     <a href="#" class="icon-button left">
       <img src="/static/icons/profile.png" alt="Профиль">
@@ -18,12 +17,10 @@
     </a>
   </header>
 
-
   <main class="main-content">
     <h1>🎓 Добро пожаловать!</h1>
     <!-- Здесь будут функции позже -->
   </main>
-
 
   <nav class="bottom-nav">
     <a href="#" class="nav-item">
@@ -38,7 +35,7 @@
       <img src="/static/icons/home.png" alt="Главная">
       <span>Главная</span>
     </a>
-    <a href="#" class="nav-item">
+    <a href="/tools" class="nav-item">
       <img src="/static/icons/tools.png" alt="Инструменты">
       <span>Инструменты</span>
     </a>
