--- a/app/HTML/student-home.html
+++ b/app/HTML/student-home.html
@@ -5,6 +5,10 @@
   <title>Главный экран обучающегося</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/html-static/student-home.css">
+  <link rel="manifest" href="/html-static/manifest.json">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
 
