SQLite, HTML and CSS changes

--- a/app/HTML/notes.html
+++ b/app/HTML/notes.html
@@ -61,6 +61,7 @@
       <textarea id="note-text" placeholder="Текст заметки" rows="10" required></textarea>
 
       <button type="submit" id="save-note-btn">Сохранить</button>
+      <button type="button" id="delete-note-btn" class="delete-btn" style="display: none;">Удалить заметку</button>
     </form>
   </section>
 
