--- a/app/HTML/welcome.html
+++ b/app/HTML/welcome.html
@@ -69,6 +69,7 @@
               <option value="1">1 курс</option>
               <option value="2">2 курс</option>
               <option value="3">3 курс</option>
+              <option value="4">4 курс</option>
             </select>
           </div>
           <div class="form-group">
